--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version" : 2,
     "builds" : [
         {
-            "src": "/api/main.py",
+            "src": "main.py",
             "use" : "@versel/python"
         }
     ],
     "routes" : [
         {
             "src" : "/(.*)",
-            "dest" : "api/main.py"
+            "dest" : "main.py"
         }
     ]
 }
