--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds" : [
         {
             "src": "main.py",
-            "use" : "@versel/python"
+            "use" : "@verсel/python"
         }
     ],
     "routes" : [
