--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ services:
   app:
     build:
       context: .
-    command: ["/fastapi_app/docker/app.sh"]
+    # command: ["/fastapi_app/docker/app.sh"]
     ports:
     - 9999:8000
